Add user-select styles to prevent text selection on wall container

--- a/index.html
+++ b/index.html
@@ -459,6 +459,10 @@
             box-shadow: 0 4px 12px rgba(0,123,255,0.3);
             position: relative;
             overflow: hidden;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
         
         /* Hover state */
