--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             --error-color: #dc3545;
             --error-color-dark: #721c24;
             
-            --background-color: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            --background-color: linear-gradient(135deg, #fcfdfe 0%, #d0daea 100%);
             --container-bg: white;
             --section-bg: #f8f9fa;
             --text-color: #2c3e50;
@@ -43,7 +43,7 @@
         
         /* Adding explicit theme classes to override the media query */
         html.theme-light {
-            --background-color: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            --background-color: linear-gradient(135deg, #fcfdfe 0%, #d0daea 100%);
             --container-bg: white;
             --section-bg: #f8f9fa;
             --text-color: #2c3e50;
@@ -922,6 +922,11 @@
         .status-success { background-color: var(--success-color); }
         .status-warning { background-color: var(--warning-color); }
         .status-error { background-color: var(--error-color); }
+        .help-text {
+            font-size: 0.75rem;
+            color: var(--text-color-secondary);
+            margin-top: 4px;
+        }
 
         /* Enhanced wardrobe and window visibility states */
         #wardrobe, #window {
@@ -1347,7 +1352,7 @@
                         <li>All fields marked with * are required</li>
                         <li>Wall dimensions must be between 1 and 10000 cm</li>
                         <li>Line thickness must be between 1 and 200 cm</li>
-                        <li>Line ratio must be between 0.1 and 10</li>
+                        <li>Line ratio must be between 0.5 and 5</li>
                         <li>Wardrobe/Window dimensions must be positive numbers</li>
                     </ul>
                 </div>
@@ -1391,8 +1396,8 @@
 
                         <div class="input-group">
                             <label for="lineRatio" class="required">Line Width Ratio (Coloured:White):</label>
-                            <input type="number" id="lineRatio" name="lineRatio" value="1" min="0.1" max="10" step="0.1" required onchange="updateLineConfigOptions(); calculateAndVisualize()">
-                            <div class="validation-message">Please enter a ratio between 0.1 and 10</div>
+                            <input type="number" id="lineRatio" name="lineRatio" value="1" min="0.5" max="5" step="0.5" required onchange="updateLineConfigOptions(); calculateAndVisualize()">
+                            <div class="validation-message">Please enter a ratio between 0.5 and 5</div>
                             <div class="help-text">
                                 1 = equal widths, 0.5 = coloured half width of white, 2 = coloured twice width of white
                             </div>
