--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="components/color-picker.js" defer></script>
 
     <!-- Main Application Script -->
-    <script src="js/app.js" defer></script>
+    <script type="module" src="js/app.js"></script>
 </head>
 
 <body>
