Initialize project with Yarn Berry, migrate to TypeScript, and set up basic tooling and configuration files.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
         content="Wall Line Calculator and Visualizer - Calculate and visualize wall line measurements easily">
     <title>Wall Line Calculator and Visualizer</title>
 
-    <!-- External Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
-
-    <!-- Web Components -->
-    <script src="components/color-picker.js" defer></script>
-
-    <!-- Main Application Script -->
-    <script type="module" src="js/app.js"></script>
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏠</text></svg>">
+    <meta name="description" content="Calculate and visualize wall line patterns effectively.">
+    <script type="module" src="/js/app.ts"></script>
 </head>
 
 <body>
